Must return transactions when year and month are passed